* The Quick Reply toggle icon was slightly misaligned (index.css) [Bug 3912] * Some profile icons were not properly aligned (Profile template) [Bug 3902] * Optimized the button strips and dropmenu buttons (index.css,menu_gfx.png) [Bug 3894] * A scrollbar appeared in some cases with IE8 (index.css)[Bug 3868]
git-svn-id: https://devel.simplemachines.org/code/smf/trunk@9255 a96bbafc-d752-43aa-a6db-eed64a5f2cf9

--- a/Themes/default/css/index.css
+++ b/Themes/default/css/index.css
@@ -514,6 +514,7 @@ table.table_grid thead tr.catbg th.smalltext
 {
 	overflow: auto;
 	line-height: 1.4em;
+	padding: 0.1em 0;
 }
 
 /* All the signatures used in the forum.  If your forum users use Mozilla, Opera, or Safari, you might add max-height here ;). */
@@ -712,7 +713,7 @@ h3.catbg, h3.catbg2, h3.titlebg, h4.titlebg, h4.catbg, .table_list tbody.header 
 {
 	overflow: hidden;
 	height: 31px;
-	line-height: 31px;
+	line-height: 32px;
 	font-size: 1.2em;
 	font-weight: bold;
 }
@@ -747,7 +748,7 @@ h3.catbg img.icon, h4.titlebg img.icon
 {
 	
 	vertical-align: middle;
-	margin: -1px 5px 0 0;
+	margin: -2px 5px 0 0;
 }
 h4.catbg span.left, h4.catbg2 span.left, h3.catbg span.left, h3.catbg2 span.left, .table_list tbody.header td span.left
 {
@@ -1103,14 +1104,14 @@ span.lowerframe span
 /* the hover effects */
 .dropmenu li a.firstlevel:hover
 {
-	background: url(../images/theme/menu_gfx.png) no-repeat 100% -31px;
+	background: url(../images/theme/menu_gfx.png) no-repeat 100% -30px;
 	color: #ffffff;
 	cursor: pointer;
 	text-decoration: none;
 }
 .dropmenu li a.firstlevel:hover span.firstlevel
 {
-	background: url(../images/theme/menu_gfx.png) no-repeat 0 -31px;
+	background: url(../images/theme/menu_gfx.png) no-repeat 0 -30px;
 }
 /* the hover effects on level2 and 3*/
 .dropmenu li li a:hover
@@ -1170,7 +1171,7 @@ span.lowerframe span
 	display: block;
 	font-size: 0.8em;
 	color: black;
-	background: url(../images/theme/menu_gfx.png) no-repeat 0 -61px;
+	background: url(../images/theme/menu_gfx.png) no-repeat 0 -60px;
 	padding: 0;
 	margin-left: 12px;
 	text-transform: uppercase;
@@ -1184,7 +1185,7 @@ span.lowerframe span
 }
 .buttonlist ul li a span
 {
-	background: url(../images/theme/menu_gfx.png) no-repeat 100% -61px;
+	background: url(../images/theme/menu_gfx.png) no-repeat 100% -60px;
 	display: block;
 	height: 24px;
 	line-height: 20px;
@@ -1199,13 +1200,13 @@ span.lowerframe span
 /* the active one */
 .buttonlist ul li a.active
 {
-	background: url(../images/theme/menu_gfx.png) no-repeat 0 -31px;
+	background: url(../images/theme/menu_gfx.png) no-repeat 0 -30px;
 	color: white;
 	font-weight: bold;
 }
 .buttonlist ul li a.active span
 {
-	background: url(../images/theme/menu_gfx.png) no-repeat 100% -31px;
+	background: url(../images/theme/menu_gfx.png) no-repeat 100% -30px;
 }
 .buttonlist ul li a.active
 {
